--- a/app/src/main/res/xml/changelog_master.xml
+++ b/app/src/main/res/xml/changelog_master.xml
@@ -5,7 +5,7 @@
         versioncode="106">
         <change>Senden der Benachrichtigung zu einer festen Zeit</change>
         <change>Englische Sprache hinzugefügt</change>
-        <!--        <change>Sprachendialog hinzugefügt</change>-->
+        <change>Sprachendialog hinzugefügt</change>
         <change>Anzeigen ob ein Tag schon vergangen ist</change>
         <change>Änderung der Anzeige auf Wochentage</change>
         <change>Summe der vertretenen Stunden in der Benachrichtigung</change>
