--- a/app/src/main/res/layout/activity_choice.xml
+++ b/app/src/main/res/layout/activity_choice.xml
@@ -19,6 +19,14 @@
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
+        <Spinner
+            android:id="@+id/choice_parent_spinner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:popupTheme="@style/AppTheme.PopupOverlay"
+            android:visibility="gone"
+            android:enabled="false" />
+
     </com.google.android.material.appbar.AppBarLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
